--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -10,7 +10,7 @@
 <body>
 <div class="administrators-menu-grid">
     <div class="header">
-        <a th:href="@{/admin/profile}" class="button button_profile">
+        <a th:href="@{/profile}" class="button button_profile">
             Profile
         </a>
     </div>
