--- a/src/main/resources/templates/managers/manager__menu.html
+++ b/src/main/resources/templates/managers/manager__menu.html
@@ -10,7 +10,7 @@
 <body>
 <div class="managers-grid">
     <div class="managers-grid__header">
-        <a th:href="@{/man/profile}" class="flex-column button button_profile">
+        <a th:href="@{/profile}" class="flex-column button button_profile">
             Profile
         </a>
         <img alt="Clients list" class="clientsListButton" th:src="@{/images/human_list_icon.png}">
