--- a/src/main/resources/templates/security/sec__main.html
+++ b/src/main/resources/templates/security/sec__main.html
@@ -10,7 +10,7 @@
 <body>
 <div class="security-grid">
     <div>
-        <a th:href="@{/sec/profile}" class="flex-column button button_profile">
+        <a th:href="@{/profile}" class="flex-column button button_profile">
             Profile
         </a>
     </div>
