--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -125,6 +125,13 @@ select {
     align-items: center;
 }
 
+.flex-column-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
 .flex-column-top {
     display: flex;
     flex-direction: column;
