--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -20,35 +20,55 @@
 <div class="content flex-column">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
     <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
-
-    <div class="form-item_micro" th:text="${user.name}"></div>
-    <div class="form-item_micro" th:text="${'Level: ' + user.level}"></div>
-    <div class="form-item_micro" th:text="${'Salary: ' + user.salary}"></div>
-    <div class="form-item_micro" th:text="${'Position: ' + user.position}"></div>
-
-    <form action="#" th:action="@{/changePass}" th:object="${form}" method="post" class="flex-column">
-        <label class="form-item">
-            <b>Old password</b>
-            <input th:field="*{prevPass}" required type="password" class="input_big">
-        </label>
-        <label class="form-item">
-            <b>New Password</b>
-            <input th:field="*{newPass}" required type="password" class="input_big">
-        </label>
-        <input type="submit" class="button form-item" value="Change password">
-    </form>
-    <b class="form-item_big font-big">Your cash rewards</b>
-    <div class="form-item gray" th:if="${cashRewards == null or cashRewards.isEmpty()}">
-        You don't have any rewards yet...
-    </div>
-    <div th:each="reward: ${cashRewards}" class="content__item">
-        <div class="content__main finished">
-            <b><span th:text="${reward.reward + ' c.u.'}"></span></b>
-            <span> on </span>
-            <span class="datetime-to-format" th:text="${reward.issueDate}"></span>
+    <div class="profile">
+        <h1 class="form-item_micro" th:text="${user.name}"></h1>
+        <div th:switch="${user.user.role.name()}">
+            <div class="font-big" th:case="SCIENTIST" th:text="${'Research Department, ' + user.position}"></div>
+            <div class="font-big" th:case="SECURITY" th:text="${'Security and Protection, ' + user.position}"></div>
+            <div class="font-big" th:case="MANAGER" th:text="${'Branch of Management' + user.position}"></div>
+            <div class="font-big" th:case="ADMINISTRATOR" th:text="${'Administrative Branch' + user.position}"></div>
+        </div>
+        <h2>Stats</h2>
+        <div class="stats-item font-big">
+            <div>Level</div>
+            <b th:text="${user.level}"></b>
+        </div>
+        <div class="stats-item font-big">
+            <div>Salary</div>
+            <b th:text="${user.salary}"></b>
+        </div>
+        <h2>Security</h2>
+        <button id="change-password-button" class="button">Change password</button>
+        <form id="change-password-form" action="#" th:action="@{/changePass}" th:object="${form}" method="post"
+              class="hidden flex-column-left">
+            <label>
+                <b>Old password</b>
+                <input th:field="*{prevPass}" required type="password" class="input_big">
+            </label>
+            <label class="form-item">
+                <b>New Password</b>
+                <input th:field="*{newPass}" required type="password" class="input_big">
+            </label>
+            <input type="submit" class="button form-item" value="Confirm">
+        </form>
+        <h2>Your cash rewards</h2>
+        <div class="form-item gray" th:if="${cashRewards == null or cashRewards.isEmpty()}">
+            You don't have any rewards yet...
+        </div>
+        <div th:each="reward: ${cashRewards}" class="content__item">
+            <div class="content__main finished">
+                <div>
+                    <b th:text="${reward.reward + ' c.u.'}"></b>
+                </div>
+                <div>
+                    <span> on </span>
+                    <span class="datetime-to-format" th:text="${reward.issueDate}"></span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<script rel="script" type="text/javascript" th:src="@{/js/profile.js}"></script>
 <script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
 </body>
 </html>
