--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -52,32 +52,34 @@
                 </span>
         </div>
         <div class="content__main" th:switch="${exp.status.name()}">
-            <div th:if="${exp.assistant}">
-                <b>Assistant</b>
-                <div th:text="${exp.assistant.employee.name}"></div>
+            <div class="flex-column-left">
+                <div th:if="${exp.assistant}">
+                    <b class="form-item_micro">Assistant</b>
+                    <div th:text="${exp.assistant.employee.name}"></div>
+                </div>
+                <div th:case="PENDING">
+                    <b>Submitted on </b>
+                </div>
+                <div th:case="APPROVED">
+                    <b>Approved on </b>
+                </div>
+                <div th:case="REJECTED">
+                    <b> Rejected on </b>
+                </div>
+                <div th:case="FINISHED">
+                    <b> Finished on </b>
+                </div>
+                <div class="datetime-to-format" th:text="${exp.statusDate}"></div>
+                <b class="form-item_micro">Description</b>
+                <div th:text="${exp.description}"></div>
+                <div th:if="${exp.status.name() == 'FINISHED'}">
+                    <b class="form-item_micro"> Report </b>
+                    <div th:text="${exp.result}"></div>
+                </div>
             </div>
-            <div th:case="PENDING">
-                <b>Submitted on </b>
-            </div>
-            <div th:case="APPROVED">
-                <b>Approved on </b>
-            </div>
-            <div th:case="REJECTED">
-                <b> Rejected on </b>
-            </div>
-            <div th:case="FINISHED">
-                <b> Finished on </b>
-            </div>
-            <div class="datetime-to-format" th:text="${exp.statusDate}"></div>
-            <b>Description</b>
-            <div th:text="${exp.description}"></div>
             <div class="flex-column">
                 <a th:if="${exp.status.name()=='APPROVED'}" th:href="@{'/sci/report?id=' + ${exp.id}}"
                    th:attr="data-exp-id=${exp.id}" class="button form-item_small">Write report</a>
-            </div>
-            <div th:if="${exp.status.name() == 'FINISHED'}">
-                <b> Report </b>
-                <div th:text="${exp.result}"></div>
             </div>
         </div>
     </div>
