--- a/src/main/resources/templates/administrators/admin__experiments.html
+++ b/src/main/resources/templates/administrators/admin__experiments.html
@@ -60,5 +60,6 @@
     </div>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/administrators/admin__experiments-articles.js}"></script>
+<script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
 </body>
 </html>
