--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -14,7 +14,7 @@
         <div class="mobile-title">Articles</div>
     </div>
     <div id="mobile-menu" class="flex-row">
-        <a th:href="@{/sci/profile}" class="flex-column button button_profile">
+        <a th:href="@{/profile}" class="flex-column button button_profile">
             Profile
         </a>
         <a th:href="@{/sci/main}" id="experiments-button" class="experiments-button grid-button button">
@@ -33,10 +33,12 @@
 </div>
 
 
-<div class="content flex-column">
+<div class="content">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
-    <div class="form-item_big gray" th:if="${articles == null or articles.isEmpty()}">
-        You didn't write any articles
+    <div class="flex-column">
+        <div class="form-item_big gray" th:if="${articles == null or articles.isEmpty()}">
+            You didn't write any articles
+        </div>
     </div>
     <div th:each="article : ${articles}" class="content__item">
         <div class="content__header finished">
