--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -32,6 +32,10 @@ select {
     margin-top: 20px;
 }
 
+.form-item_giant {
+    margin-top: 70px;
+}
+
 .form-item_big {
     margin-top: 40px;
 }
@@ -106,6 +110,11 @@ select {
 .icon {
     width: 50px;
     height: 50px;
+}
+
+.icon_b {
+    width: 55px;
+    height: 55px;
 }
 
 .icon_big {
