--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -8,7 +8,7 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="administrators-menu-grid">
+<div class="grid">
     <div class="header">
         <a th:href="@{/profile}" class="button button_profile">
             Profile
@@ -16,20 +16,15 @@
     </div>
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
     <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
-    <a class="flex-column administrators-menu-grid__district grid-button button">District</a>
-    <a th:href="@{/admin/experiments}" class="flex-column administrators-menu-grid__experiments-articles grid-button button">Experiments
-        & Articles</a>
-    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button">Purchase & sale requests</a>
-    <a th:href="@{/admin/employee}"
-       class="flex-column administrators-menu-grid__employees grid-button button">Employees</a>
-    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button">Prawn
-        vacancies</a>
-    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button">Synthesized
-        & confiscated weapons</a>
-    <a th:href="@{/admin/prawns}" class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawn
-        registration</a>
-    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button">Prawns'
-        job applications</a>
+    <a class="flex-column district grid-button button">District</a>
+    <a th:href="@{/admin/experiments}" class="flex-column experiments-articles grid-button button">Experiments &
+        Articles</a>
+    <a class="flex-column clients-manufacturers grid-button button">Purchase & sale requests</a>
+    <a th:href="@{/admin/employee}" class="flex-column employees grid-button button">Employees</a>
+    <a class="flex-column prawn-vacancies grid-button button">Prawn vacancies</a>
+    <a class="flex-column synthesized-confiscated-weapons grid-button button">Synthesized & confiscated weapons</a>
+    <a th:href="@{/admin/prawns}" class="flex-column prawn-registration grid-button button">Prawn registration</a>
+    <a class="flex-column prawn-job-applications grid-button button">Prawns' job applications</a>
 </div>
 </body>
 </html>
