--- a/src/main/resources/templates/managers/manager__prawn-registration.html
+++ b/src/main/resources/templates/managers/manager__prawn-registration.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <div class="flex-row-left">
-    <a th:href="@{/admin/main}">
+    <a th:href="@{/}">
         <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
     </a>
 </div>
 <div th:if="${status}" th:text="${status}" class="form-item_small flash flash_success"></div>
 <div th:if="${error}" th:text="${error}" class="form-item_small flash flash_error"></div>
-<form action="#" th:action="@{/admin/registerPrawn}" th:object="${form}" method="post"
+<form action="#" th:action="@{/man/registerPrawn}" th:object="${form}" method="post"
       class="flex-column form-item_giant">
     <b>Prawn registration</b>
     <label class="form-item_big">
