--- a/src/main/resources/templates/scientists/sci__new-article.html
+++ b/src/main/resources/templates/scientists/sci__new-article.html
@@ -8,6 +8,7 @@
     <title>MNU</title>
 </head>
 <body>
+<div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 <div class="flex-row-left">
     <a th:href="@{/sci/main}">
         <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
