--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -16,17 +16,12 @@
         <img alt="Clients list" class="icon_b header__icon" th:src="@{/images/human_list_icon.png}">
         <img alt="Prawns list" class="icon_b header__icon" th:src="@{/images/alien_list_icon.png}">
     </div>
-    <div class="managers-grid__buttons flexColumn">
+    <div class="managers-grid__buttons">
         <a class="flex-column grid-button button">Purchase requests</a>
-        <a th:href="@{/man/prawnRegister}"
-           class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawns
-            registrations</a>
-        <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button">Synthesized
-            & confiscated weapons</a>
-        <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button">Prawns'
-            job applications</a>
-        <a class="flex-column grid-button button">Equipment
-            change</a>
+        <a th:href="@{/man/prawnRegister}" class="flex-column grid-button button">Prawns registrations</a>
+        <a class="flex-column grid-button button">Synthesized & confiscated weapons</a>
+        <a class="flex-column grid-button button">Prawns' job applications</a>
+        <a class="flex-column grid-button button">Equipment change</a>
     </div>
 </div>
 </body>
