--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,21 +7,19 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/auth.css}">
     <title>MNU</title>
 </head>
-<body class="login-page">
-<div class="flex-column" style="height: 100vh">
-    <form action="#" method="post" th:action="@{/auth/login}" th:object="${form}" class="flex-column login-page__box">
-        <label class="login-page__item">
-            <b>Login</b>
-            <input th:field="*{username}" class="input_big">
-        </label>
-        <label class="login-page__item">
-            <b>Password</b>
-            <input th:field="*{password}" type="password" class="input_big">
-        </label>
-        <input type="submit" class="login-page__item button" value="Log in">
-        <span th:if="${loginFailed}">Incorrect login or password</span>
-        <a class="login-page__item button" th:href="@{/auth/register}">Register</a>
-    </form>
-</div>
+<body>
+<form action="#" method="post" th:action="@{/auth/login}" th:object="${form}" class="flex-column lower">
+    <label class="form-item">
+        <b>Login</b>
+        <input th:field="*{username}" class="input_big">
+    </label>
+    <label class="form-item">
+        <b>Password</b>
+        <input th:field="*{password}" type="password" class="input_big">
+    </label>
+    <div th:if="${loginFailed}" class="form-item"><b>Incorrect login or password</b></div>
+    <input type="submit" class="form-item button" value="Log in">
+    <a class="form-item button" th:href="@{/auth/register}">Register</a>
+</form>
 </body>
 </html>
