--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,38 +7,33 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/auth.css}">
     <title>MNU</title>
 </head>
-<body class="login-page">
-<div class="flex-column" style="height: 100vh">
-    <form action="#" th:action="@{/auth/register}" th:object="${form}" method="post" class="flex-column login-page__box">
-        <a class="login-page__back-link login-page__item" th:href="@{/auth/login}">< back</a>
-        <label class="login-page__item">
-            <b>Login</b>
-            <input th:field="*{username}" class="input_big">
-        </label>
-        <label class="login-page__item">
-            <b>Password</b>
-            <input th:field="*{password}" type="password" class="input_big">
-        </label>
-        <label class="login-page__item">
-            <b>Email</b>
-            <input th:field="*{email}" type="email" class="input_big">
-        </label>
-        <label class="login-page__item">
-            <b>Name</b>
-            <input th:field="*{name}" class="input_big">
-        </label>
-        <div class="checkbox-flex">
-            <div class="registration-checkbox">
-                <input th:field="*{type}" th:value="customer" id="customerRadio" type="radio" name="clientType" class="login-page__item checkbox">
-                <label class="login-page__checkbox" for="customerRadio">Customer</label>
-            </div>
-            <div class="registration-checkbox">
-                <input th:field="*{type}" th:value="manufacturer" id="manufacturerRadio" type="radio" name="clientType" class="login-page__item checkbox">
-                <label class="login-page__checkbox" for="manufacturerRadio">Manufacturer</label>
-            </div>
-        </div>
-        <input type="submit" class="login-page__item button" value="Register">
-    </form>
-</div>
+<body>
+<form action="#" th:action="@{/auth/register}" th:object="${form}" method="post" class="flex-column reg-lower">
+    <a class="login-page__back-link" th:href="@{/auth/login}">< back</a>
+    <label class="form-item">
+        <b>Login</b>
+        <input th:field="*{username}" class="input_big">
+    </label>
+    <label class="form-item">
+        <b>Password</b>
+        <input th:field="*{password}" type="password" class="input_big">
+    </label>
+    <label class="form-item">
+        <b>Email</b>
+        <input th:field="*{email}" type="email" class="input_big">
+    </label>
+    <label class="form-item">
+        <b>Name</b>
+        <input th:field="*{name}" class="input_big">
+    </label>
+    <label class="form-item">
+        <b>Who are you?</b>
+        <select id="type" name="type" class="input_big">
+            <option value="customer"> Customer</option>
+            <option value="manufacturer"> Manufacturer</option>
+        </select>
+    </label>
+    <input type="submit" class="form-item button" value="Register">
+</form>
 </body>
 </html>
