--- a/src/main/resources/templates/administrators/admin__articles.html
+++ b/src/main/resources/templates/administrators/admin__articles.html
@@ -37,16 +37,15 @@
         </div>
         <div class="content__main content__main_article">
             <div th:text="${article.text}"></div>
-            <form th:id="${'reward-form-' + article.scientist.id}" class="form-item flex-column" action="#"
-                  method="post" th:action="@{/admin/giveReward}" th:object="${form}">
-                <input type="hidden" th:id="${'empId-input-' + article.scientist.id}"
-                       value="${article.scientist.id}">
-                <input th:id="${'reward-input-' + article.scientist.id}" required class="hidden input_big"
-                       type="number" min="0"
-                       placeholder="Reward">
-                <input type="submit" th:attr="data-empId=${article.scientist.id}" data-action="reward"
-                       class="button approved form-item_small" value="Give Reward">
-            </form>
+            <div th:id="${'reward-message-' + article.scientist.id}"
+                 class="hidden form-item_small reward-message"></div>
+            <div th:id="${'reward-form-' + article.scientist.id}">
+                <input th:id="${'reward-input-' + article.scientist.id}" class="reward-input hidden input_big"
+                       type="number" min="0" placeholder="Reward">
+                <button th:attr="data-empId=${article.scientist.id}" data-action="reward"
+                        class="button approved form-item_small"> Give reward
+                </button>
+            </div>
         </div>
     </div>
 </div>
