--- a/src/main/resources/templates/managers/manager__client-list.html
+++ b/src/main/resources/templates/managers/manager__client-list.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/managers/manager__lists.css}">
+    <title>MNU</title>
 </head>
 <body>
+<div class="flex-row-left">
+    <a th:href="@{/}">
+        <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
+    </a>
+</div>
 
+<div class="content">
+    <h1>My clients</h1>
+    <div class="form-item gray" th:if="${clients == null or clients.isEmpty()}">
+        You don't have any clients...
+    </div>
+    <div th:each="client: ${clients}" class="content__item content__main finished">
+        <div th:text="${'Customer #' + client.id + ' ' + client.name}"></div>
+        <div> Email <b th:text="${client.email}"></b></div>
+    </div>
+</div>
 </body>
 </html>
