prawn redirect fix

--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -23,7 +23,7 @@
     <div class="managers-grid__buttons">
         <a class="flex-column grid-button button">Purchase requests</a>
         <a th:href="@{/man/prawnRegister}" class="flex-column grid-button button">Prawns registrations</a>
-        <a class="flex-column grid-button button">New weapons</a>
+        <a th:href="@{/man/newWeapons}" class="flex-column grid-button button">New weapons</a>
         <a class="flex-column grid-button button">Prawns' job applications</a>
         <a class="flex-column grid-button button">Equipment change</a>
     </div>
