--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -22,7 +22,7 @@
     <a class="flex-column clients-manufacturers grid-button button">Purchase & sale requests</a>
     <a th:href="@{/admin/employee}" class="flex-column employees grid-button button">Employees</a>
     <a class="flex-column prawn-vacancies grid-button button">Prawn vacancies</a>
-    <a class="flex-column new-weapons grid-button button">New weapons</a>
+    <a th:href="@{/admin/newWeapons}" class="flex-column new-weapons grid-button button">New weapons</a>
     <a th:href="@{/admin/prawns}" class="flex-column prawn-registration grid-button button">Prawn registration</a>
     <a class="flex-column prawn-job-applications grid-button button">Prawns' job applications</a>
 </div>
