--- a/src/main/resources/templates/managers/manager__new-weapons.html
+++ b/src/main/resources/templates/managers/manager__new-weapons.html
@@ -14,5 +14,15 @@
     </a>
 </div>
 
+<div class="content">
+    <h1>New weapon requests</h1>
+    <div class="form-item gray" th:if="${weapons == null or weapons.isEmpty()}">
+        There are no new requests
+    </div>
+    <div th:each="client: ${clients}" class="content__item content__main finished">
+        <div th:text="${'Customer #' + client.id + ' ' + client.name}"></div>
+        <div> Email <b th:text="${client.email}"></b></div>
+    </div>
+</div>
 </body>
 </html>
