--- a/src/main/resources/static/css/prawns/prawn__main.css
+++ b/src/main/resources/static/css/prawns/prawn__main.css
@@ -1,1 +1,15 @@
 @import url("../common.css");
+
+.menu-item {
+    margin: 20px;
+}
+
+.menu-content {
+    margin-top: 10.5vh;
+}
+
+@media (max-width: 600px) {
+    .flex-row-center {
+        flex-direction: column;
+    }
+}
