--- a/src/main/resources/templates/prawns/prawn__main.html
+++ b/src/main/resources/templates/prawns/prawn__main.html
@@ -8,30 +8,28 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="flex-row-left">
-    <a th:href="@{/prawn/profile}" class="flex-row-center button">
-        <img alt="profile" th:src="@{/images/profile.png}" class="icon">
-        Profile
-    </a>
+<div class="flex-column">
+    <h3>Name Name</h3>
+    <b class="font-big">JOb JOB</b>
 </div>
 
-<div class="flex-row-center">
+<div class="flex-row-center menu-content">
     <div class="flex-column">
         <div class="flex-row-center">
-            <img alt="karma" th:src="@{/images/karma.png}" class="icon_big">
-            <div>999999</div>
+            <img alt="karma" th:src="@{/images/karma.png}" class="menu-item icon_big">
+            <div class="font-huge">999999</div>
         </div>
-        <a class="flex-column button">
+        <a class="flex-column button menu-item">
             <img alt="vacancies" th:src="@{/images/job.png}" class="icon_giant">
             Apply for a job
         </a>
     </div>
     <div class="flex-column">
         <div class="flex-row-center">
-            <img alt="money" th:src="@{/images/gold_coin.png}" class="icon_big">
-            <div>99999</div>
+            <img alt="money" th:src="@{/images/gold_coin.png}" class="menu-item icon_big">
+            <div class="font-huge">99999</div>
         </div>
-        <a class="flex-column button">
+        <a class="flex-column button menu-item">
             <img alt="store" th:src="@{/images/prawn_cart.png}" class="icon_giant">
             Buy items
         </a>
