--- a/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
+++ b/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
@@ -1,1 +1,37 @@
 @import url("../common.css");
+
+.content {
+    text-align: center;
+}
+
+.content_prawns {
+    text-align: left;
+}
+
+.content__item {
+    word-break: break-word;
+    width: 400px;
+    margin: 20px auto auto auto;
+    border: 2px solid black;
+}
+
+.content__main {
+    padding: 12px;
+}
+
+h1 {
+    margin-top: 0;
+    text-align: center;
+}
+
+.content__header {
+    text-align: center;
+    padding: 12px 12px 10px;
+    border-bottom: 2px solid;
+}
+
+@media (max-width: 500px) {
+    .content__item {
+        width: 80vw;
+    }
+}
