--- a/src/main/resources/templates/managers/manager__new-weapons.html
+++ b/src/main/resources/templates/managers/manager__new-weapons.html
@@ -20,8 +20,39 @@
         There are no new requests
     </div>
     <div th:each="request: ${requests}" class="content__item content__main finished">
-        <div th:text="${'Customer #' + client.id + ' ' + client.name}"></div>
-        <div> Email <b th:text="${client.email}"></b></div>
+        <div class="flex-row-center">
+            <div th:switch="${request.type.name()}">
+                <img th:case="MELEE" alt="melee" th:src="@{/images/melee.png}">
+                <img th:case="PISTOL" alt="pistol" th:src="@{/images/pistol.svg}">
+                <img th:case="SUBMACHINE_GUN" alt="submachine gun" th:src="@{/images/}">
+                <img th:case="ASSAULT_RIFLE" alt="assault rifle" th:src="@{/images/assault.png}">
+                <img th:case="LIGHT_MACHINE_GUN" alt="light machine gun" th:src="@{/images/}">
+                <img th:case="SNIPER_RIFLE" alt="sniper rifle" th:src="@{/images/sniper.png}">
+                <img th:case="ALIEN" alt="alien" th:src="@{/images/alien.png}">
+            </div>
+            <div>
+                <div class="form-item_small">
+                    <b>Name</b>
+                    <span th:text="${request.name}"></span>
+                </div>
+                <div class="form-item_small">
+                    <b>Description</b>
+                    <span th:text="${request.description}"></span>
+                </div>
+                <div class="form-item_small">
+                    <b>Access level</b>
+                    <span th:text="${request.requiredAccessLvl}"></span>
+                </div>
+                <div class="form-item_small">
+                    <b>Price</b>
+                    <span th:text="${request.price}"></span>
+                </div>
+                <div class="form-item_small">
+                    <b>Quantity</b>
+                    <span th:text="${request.quantity}"></span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
